--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             ul li a{
                 text-decoration:none;
-                
+                color:black;
             
             }
             ul li ul li ul{
@@ -75,7 +75,7 @@
     <body>
         <h1 align="center"><font color="black" size=50px>KREA</font></h1>
 
-        <ul font="black">
+        <ul font color="white">
             <li><a href="https://prabhash-varma.github.io/KREA/">Home</a></li>
             <li><a href="https://www.iiits.ac.in/academics/almanac-time-table/" target="blank">Almanac</a></li>
             <li>Sem-1</font>
